# yomama

./: pyproject.toml
yomama/: manage.py  requirements.txt
yomama/assets/: joke_list.csv
yomama/data/: urls.py  views.py
yomama/static/css/: style.css
yomama/templates/: api-docs.html  base.html  footer.html  index.html
yomama/v1/: admin.py  api.py  apps.py  models.py  private_api.py  schema.py  urls.py  views.py
yomama/v1/migrations/: 0001_initial.py  0002_alter_joke_id.py  0003_alter_joke_id.py  0004_alter_joke_id.py
yomama/yomama/: api.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
