[tool.poetry]
name = "yomama"
version = "0.1.0"
description = "Yo mama jokes API using rest framework and htmx."
authors = ["John Laffey <laffeychem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
django-import-export = "^3.0.2"
orjson = "^3.8.6"
django-ninja = "^0.20.0"
mysqlclient = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
